[package]
name = "libminer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version="1.0", features=["derive"] }
serde_json = "1.0"
tokio = {version="1.19", features=["net", "time"]}
tracing = "0.1"
async-trait = "0.1"
chrono = {version="0.4", features=["serde"]}
reqwest = {version="0.11", features=["json", "multipart", "gzip", "cookies"]}
digest_auth = "0.3"
thiserror = "1.0"
openssl = "0.10"
md-5 = "0.9"
sha2 = "0.9"
lazy-regex = "2.3"
base64 = "0.13"

[features]
vendored-openssl = ["openssl/vendored"]
minerva = []
antminer = []
whatsminer = []
all = ["minerva", "antminer", "whatsminer"]