[package]
name = "libminer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version="1.0.137", features=["derive"] }
serde_json = "1.0.81"
tokio = {version="1.19.2", features=["net", "time"]}
tracing = "0.1.35"
async-trait = "0.1.56"
chrono = {version="0.4.19", features=["serde"]}
reqwest = {version="0.11.11", features=["json", "multipart", "gzip", "cookies"]}
digest_auth = "0.3.0"
thiserror = "1.0.31"
openssl = "0.10.40"
md-5 = "0.9.1"
sha2 = "0.9.9"
lazy-regex = "2.3.0"
base64 = "0.13.0"

[features]
vendored-openssl = ["openssl/vendored"]
minerva = []
antminer = []
whatsminer = []
all = ["minerva", "antminer", "whatsminer"]